# ChangeLog for dev-libs/libyaml
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libyaml/ChangeLog,v 1.46 2014/02/27 14:29:26 pinkbyte Exp $

  27 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> -libyaml-0.1.4.ebuild:
  Security cleanup, wrt bug #499920

  17 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for arm, wrt bug #499920

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for alpha, wrt bug #499920

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for sparc, wrt bug #499920

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for ppc64, wrt bug #499920

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for ppc, wrt bug #499920

  09 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> libyaml-0.1.5.ebuild:
  x86 stable wrt security bug #499920

  08 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for amd64, wrt bug #499920

  08 Feb 2014; Akinori Hattori <hattya@gentoo.org> libyaml-0.1.5.ebuild:
  ia64 stable wrt bug #499920

  07 Feb 2014; Jeroen Roovers <jer@gentoo.org> libyaml-0.1.5.ebuild:
  Stable for HPPA (bug #499920).

*libyaml-0.1.5 (07 Feb 2014)

  07 Feb 2014; Tim Harder <radhermit@gentoo.org> +libyaml-0.1.5.ebuild:
  Version bump.

  08 Aug 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Add myself as maintainer.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> -libyaml-0.0.1.ebuild,
  -libyaml-0.1.2.ebuild, -libyaml-0.1.3.ebuild, metadata.xml:
  Cleanup due #92799

  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> libyaml-0.1.4.ebuild:
  keyword ~amd64-fbsd

  26 Jan 2013; Fabian Groffen <grobian@gentoo.org> libyaml-0.1.4.ebuild:
  Run elibtoolize for FreeMiNT, keyworded, bug #446970

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> libyaml-0.1.4.ebuild:
  Stable for HPPA (bug #411507).
