@@ -1,0 +1,11 @@
+DEFINED_PHASES=compile configure install prepare test
+DESCRIPTION=YAML 1.1 parser and emitter written in C
+EAPI=5
+HOMEPAGE=http://pyyaml.org/wiki/LibYAML
+IUSE=doc examples test static-libs
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=MIT
+SLOT=0
+SRC_URI=http://pyyaml.org/download/libyaml/yaml-0.1.6.tar.gz
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	autotools-utils	fb74970befc9b65ceec689d2ccff3022	eutils	af81d52c25ec93fbdff71e0efb0de7b7	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=9290d029ce93116703daeea72076ae54
