@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libyaml
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libyaml/ChangeLog,v 1.46 2014/02/27 14:29:26 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libyaml/ChangeLog,v 1.47 2014/03/27 15:59:22 radhermit Exp $
+
+*libyaml-0.1.6 (27 Mar 2014)
+
+  27 Mar 2014; Tim Harder <radhermit@gentoo.org> +libyaml-0.1.6.ebuild:
+  Security bump (bug #505948).
 
   27 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> -libyaml-0.1.4.ebuild:
   Security cleanup, wrt bug #499920
